objects/nSBA__ETran_Response__c.object
<CustomObject>
    <description>The response from calls to the E-tran service.</description>
    <fields>
        <fullName>nSBA__Auth_Error_Number__c</fullName>
        <description>The authorizaton error code.</description>
        <label>Auth Error Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Auth_Error_Text__c</fullName>
        <description>The authorizaton error text.</description>
        <label>Auth Error Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Errors__c</fullName>
        <description>Errors returned by call to E-tran service.</description>
        <label>Errors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Liquid_Credit_Score__c</fullName>
        <description>If the application was credit scored during the request, Liquid Credit Score will be returned.</description>
        <label>Liquid Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Approval_Date__c</fullName>
        <description>The E-tran loan application approval date.</description>
        <label>Loan App Approval Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Etran_Email_Address__c</fullName>
        <description>Lender&apos;s E-mail contact address contained in E-Tran request message. It will be used as a backup communication path.</description>
        <label>Lender&apos;s Contact E-Mail Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Fund_Date__c</fullName>
        <description>Date when the loan has been funded.</description>
        <label>Funded Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Lenders_Application_Number__c</fullName>
        <description>Lender&apos;s Application Number contained in E-Tran request message. It can be used for matching of submitted application with response.</description>
        <label>Lender&apos;s Application Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Lenders_Loan_Number__c</fullName>
        <description>Lender&apos;s Loan Number contained in E-Tran request message. It can be used for matching of submitted application with response.</description>
        <label>Lender&apos;s Loan Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Name__c</fullName>
        <description>The E-tran loan application name.</description>
        <label>Loan App Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Number__c</fullName>
        <description>The E-tran loan application number.</description>
        <label>Loan App Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Received_Date__c</fullName>
        <description>The E-tran loan application received date.</description>
        <label>Loan App Received Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Request_Amount__c</fullName>
        <description>Lender&apos;s Loan Application Amount requested in E-Tran message. It can be used for matching of submitted application with response.</description>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_SBA_Approved_Amount__c</fullName>
        <description>Loan Amount Approved by SBA.</description>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_App_Status_code__c</fullName>
        <description>The E-tran loan application status code.</description>
        <label>Loan App Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_Guaranty_Fee_Amount__c</fullName>
        <description>Guaranty Fee Amount calculated by SBA.</description>
        <label>Guaranty Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_Guaranty_Fee_Explanation__c</fullName>
        <description>Detailed explanation how guaranty fee was calculated.</description>
        <label>Guaranty Fee Explanation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan_Number__c</fullName>
        <description>The E-tran loan number.</description>
        <label>Loan Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>E-tran Responses</relationshipLabel>
        <relationshipName>ETran_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__Primary_Business_DUNS_Number__c</fullName>
        <description>Primary business DUNS number if it was looked up during the request.</description>
        <label>Primary Business DUNS Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Request_Message__c</fullName>
        <description>XML Request sent to E-Tran service</description>
        <label>Request Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Response_Message__c</fullName>
        <description>XML Response Received from E-Tran service</description>
        <label>Response Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Synopsis__c</fullName>
        <description>Synopsis of call to E-tran service.</description>
        <label>Synopsis</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>E-tran Response</label>
    <nameField>
        <label>E-tran Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E-tran Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>